--- a/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="550" 
-             d:DesignWidth="900">
+             d:DesignWidth="1080">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -48,9 +48,8 @@
             </Grid.ColumnDefinitions>
             <materialDesign:Card 
                 Grid.Column="0"
-                Width="420"
-                Height="270"
-                Margin="4,2,8,16">
+                Width="500"
+                Height="300">
                 <Grid VerticalAlignment="Stretch">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -118,9 +117,8 @@
 
             <materialDesign:Card 
                 Grid.Column="1"  
-                Width="420"
-                Height="270"
-                Margin="8,2,4,16">
+                Width="500"
+                Height="300">
                 <Grid VerticalAlignment="Stretch">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
