--- a/LemonPlatform.Wpf/Views/UserControls/ChatEmptyView.xaml
+++ b/LemonPlatform.Wpf/Views/UserControls/ChatEmptyView.xaml
@@ -9,7 +9,8 @@
              d:DesignWidth="800">
     <Grid>
         <TextBlock Text="No Chats"
-                   Style="{StaticResource MaterialDesignBody1TextBlock}"
+                   Style="{StaticResource MaterialDesignTitleLargeTextBlock}"
+                   Foreground="{DynamicResource MaterialDesignBody}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"/>
     </Grid>
